<resources>
    <string name="app_name">Calculadora2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_sum">+</string>
    <string name="button_rec">-</string>
    <string name="button_multiplicar">x</string>
    <string name="button_dividir">/</string>
    <string name="button_decimal">.</string>
    <string name="button_igual">=</string>
    <string name="button_borrar">C</string>
    <string name="button_backspace">⌫</string>
    <string name="button_raiz">√</string>
    <string name="button_pot">0º</string>

</resources>