<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="4"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="409dp"
            android:layout_height="427dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagen"
            app:layout_constraintBottom_toTopOf="@+id/textOperacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.554" />

        <Button
            android:id="@+id/btnMutear"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:drawableRight="@android:drawable/ic_lock_silent_mode_off"
            android:onClick="mutearAction"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:drawableRight="@android:drawable/ic_media_next"
            android:onClick="siguienteAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textResultado"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="#00000000"
            android:lines="2"
            android:maxLines="2"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="49dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/textOperacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/textResultado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:onClick="allClearAction"
            android:text="@string/button_borrar"
            android:textColor="@color/red" />
        <Button
            style="@style/buttonNumber"
            android:onClick="backSpaceAction"
            android:text="@string/button_backspace"
            android:textColor="@color/blue" />

        <Button
            style="@style/buttonNumber"
            android:onClick="potenciaAction"
            android:text="@string/button_pot"
            android:textColor="@color/green" />

        <Button
            style="@style/buttonOperator"
            android:onClick="raizAction"
            android:text="@string/button_raiz"
            android:textColor="@color/black" />

    </LinearLayout>


    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_1" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_2" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_3" />

        <Button
            style="@style/buttonOperator"
            android:onClick="operationAction"
            android:text="@string/button_sum"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_4" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_5" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_6" />

        <Button
            style="@style/buttonOperator"
            android:onClick="operationAction"
            android:text="@string/button_rec"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_7" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_8" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_9" />

        <Button
            style="@style/buttonOperator"
            android:onClick="operationAction"
            android:text="@string/button_multiplicar"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/button_decimal"
            android:textColor="@color/black" />

        <Button
            style="@style/buttonNumber"
            android:onClick="numberActionWithSound"
            android:text="@string/button_0" />

        <Button
            style="@style/buttonNumber"
            android:onClick="equalAction"
            android:text="@string/button_igual"
            android:textColor="@color/black" />

        <Button
            style="@style/buttonOperator"
            android:onClick="operationAction"
            android:text="@string/button_dividir"
            android:textColor="@color/black" />

    </LinearLayout>


</LinearLayout>